--- a/datastores/org.kevoree.modeling.microframework.datastores.http/pom.xml
+++ b/datastores/org.kevoree.modeling.microframework.datastores.http/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.microframework.datastores.grizzly</artifactId>
-    <name>Kevoree :: Modeling :: DataStores :: Grizzly</name>
+    <artifactId>org.kevoree.modeling.microframework.datastores.http</artifactId>
+    <name>Kevoree :: Modeling :: DataStores :: HTTP</name>
 
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
@@ -18,6 +18,16 @@
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.microframework</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.1.0.RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>9.1.0.RC1</version>
         </dependency>
     </dependencies>
 
