--- a/org.kevoree.modeling.cpp.generator.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.cpp.generator.mavenplugin/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.5.5-SNAPSHOT</version>
+        <version>1.9.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -27,8 +27,8 @@
 
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
-            <artifactId>org.kevoree.modeling.kotlin.generator</artifactId>
-            <version>${project.parent.version}</version>
+            <artifactId>org.kevoree.modeling.cpp.generator</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
