--- a/org.kevoree.modeling.cpp.generator/pom.xml
+++ b/org.kevoree.modeling.cpp.generator/pom.xml
@@ -10,6 +10,7 @@
         <version>1.9.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <version>1.1-SNAPSHOT</version>
 
 
     <developers>
@@ -45,7 +46,7 @@
         <dependency>
             <groupId>org.kevoree</groupId>
             <artifactId>org.kevoree.maven.resolver</artifactId>
-            <version>2</version>
+            <version>3</version>
         </dependency>
 
 
