--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.kevoree.maven</groupId>
+                <artifactId>org.kevoree.maven-settings-ci</artifactId>
+                <version>1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>set</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
