--- a/pom.xml
+++ b/pom.xml
@@ -163,9 +163,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.kevoree.maven</groupId>
-                <artifactId>org.kevoree.maven-settings-ci</artifactId>
-                <version>1</version>
+                <groupId>org.kevoree.tools</groupId>
+                <artifactId>org.kevoree.maven.settings.ci</artifactId>
+                <version>2</version>
                 <executions>
                     <execution>
                         <goals>
