--- a/pom.xml
+++ b/pom.xml
@@ -163,8 +163,8 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.kevoree.tools</groupId>
-                <artifactId>org.kevoree.maven.settings.ci</artifactId>
+                <groupId>org.kevoree.maventools</groupId>
+                <artifactId>org.kevoree.maventools.settings.ci</artifactId>
                 <version>2</version>
                 <executions>
                     <execution>
