--- a/org.kevoree.modeling.cpp.microframework/pom.xml
+++ b/org.kevoree.modeling.cpp.microframework/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.9.4-SNAPSHOT</version>
+        <version>1.9.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
