--- a/metamodel/smartgrid/smartgrid.tests/pom.xml
+++ b/metamodel/smartgrid/smartgrid.tests/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>org.kevoree.modeling.microframework.datastores.leveldb</artifactId>
             <version>${kmf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
