--- a/cpp/org.kevoree.modeling.cpp.microframework/pom.xml
+++ b/cpp/org.kevoree.modeling.cpp.microframework/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.cpp.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
