--- a/cpp/org.kevoree.modeling.cpp.microframework/pom.xml
+++ b/cpp/org.kevoree.modeling.cpp.microframework/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.kevoree.modeling.cpp.microframework</artifactId>
-  <version>1.3-SNAPSHOT</version>
+    <version>1.3.0</version>
     <name>Kevoree :: Modeling :: CPP :: MicroFramework</name>
     <packaging>jar</packaging>
 
     <parent>
         <artifactId>org.kevoree.modeling.cpp.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.3.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
