--- a/cpp/pom.xml
+++ b/cpp/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.cpp.root</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
 
     <name>Kevoree :: Modeling CPP :: Root</name>
     <url>https://github.com/dukeboard/kevoree-modeling-framework/cpp</url>
