go for next release iteration

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
         <module>datastores/org.kevoree.modeling.microframework.datastores.mapdb</module>
         <module>datastores/org.kevoree.modeling.microframework.datastores.http</module>
         <module>datastores/org.kevoree.modeling.microframework.datastores.websocket</module>
+
+
+        <module>org.kevoree.modeling.framework.ui.graph</module>
+
     </modules>
 
     <dependencies>
