--- a/org.kevoree.modeling.dsl/pom.xml
+++ b/org.kevoree.modeling.dsl/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>kotlin-compiler</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
     </dependencies>
 
 </project>
