--- a/org.kevoree.modeling.kotlin.generator/pom.xml
+++ b/org.kevoree.modeling.kotlin.generator/pom.xml
@@ -33,6 +33,28 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.common</artifactId>
+            <version>2.9.2-v20131212-0545</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore</artifactId>
+            <version>2.9.2-v20131212-0545</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
+            <version>2.9.1-v20131212-0545</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.xsd</groupId>
+            <artifactId>org.eclipse.xsd</artifactId>
+            <version>2.9.1-v20140203-1126</version>
+        </dependency>
+
     </dependencies>
 
     <build>
