--- a/org.kevoree.modeling.dsl/pom.xml
+++ b/org.kevoree.modeling.dsl/pom.xml
@@ -38,6 +38,23 @@
             <artifactId>kotlin-compiler</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>openapi</groupId>
+            <artifactId>openapi</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/openapi.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>plugin</groupId>
+            <artifactId>plugin</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/org.kevoree.modeling.idea.jar</systemPath>
+        </dependency>
+
     </dependencies>
 
 </project>
