fixed typo in email address (root pom)

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <developer>
             <name>Thomas Hartmann</name>
             <id>thomas.hartmann</id>
-            <email>fthomi.hartmann@gmail.com</email>
+            <email>thomi.hartmann@gmail.com</email>
             <roles>
                 <role>developer</role>
             </roles>
