--- a/org.kevoree.modeling.kotlin.generator/pom.xml
+++ b/org.kevoree.modeling.kotlin.generator/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.kevoree.modeling.kotlin.generator</artifactId>
     <name>Kevoree :: Modeling :: Kotlin :: Generator</name>
@@ -53,6 +54,12 @@
             <groupId>org.eclipse.xsd</groupId>
             <artifactId>org.eclipse.xsd</artifactId>
             <version>2.9.1-v20140203-1126</version>
+        </dependency>
+
+        <dependency>
+            <artifactId>org.kevoree.modeling.dsl</artifactId>
+            <groupId>org.kevoree.modeling</groupId>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
