--- a/org.kevoree.modeling.kotlin.generator/pom.xml
+++ b/org.kevoree.modeling.kotlin.generator/pom.xml
@@ -13,6 +13,19 @@
     </parent>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.google.javascript</groupId>
+            <artifactId>closure-compiler</artifactId>
+            <version>v20140625</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobufr</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <dependency>
             <groupId>com.squareup</groupId>
             <artifactId>javawriter</artifactId>
@@ -28,11 +41,6 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
             <version>1.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
         </dependency>
 
         <dependency>
@@ -55,13 +63,31 @@
             <artifactId>org.eclipse.xsd</artifactId>
             <version>2.9.1-v20140203-1126</version>
         </dependency>
-
         <dependency>
             <artifactId>org.kevoree.modeling.dsl</artifactId>
             <groupId>org.kevoree.modeling</groupId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-compiler</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-js-library</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
