--- a/pom.xml
+++ b/pom.xml
@@ -70,13 +70,13 @@
 
     <modules>
         <module>org.kevoree.modeling.microframework</module>
+        <module>org.kevoree.modeling.microframework.learn</module>
         <module>org.kevoree.modeling.dsl</module>
         <module>org.kevoree.modeling.kotlin.generator</module>
         <module>org.kevoree.modeling.kotlin.generator.mavenplugin</module>
         <module>datastores/org.kevoree.modeling.microframework.datastores.leveldb</module>
         <module>datastores/org.kevoree.modeling.microframework.datastores.mapdb</module>
         <module>datastores/org.kevoree.modeling.microframework.datastores.http</module>
-
         <!--
         <module>datastores/org.kevoree.modeling.microframework.datastores.websocket</module>
         -->
