--- a/datastores/org.kevoree.modeling.microframework.datastores.mongodb/pom.xml
+++ b/datastores/org.kevoree.modeling.microframework.datastores.mongodb/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.microframework.datastores.jedis</artifactId>
+    <artifactId>org.kevoree.modeling.microframework.datastores.mongodb</artifactId>
     <name>Kevoree :: Modeling :: DataStores :: MongoDB</name>
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>3.5.11-SNAPSHOT</version>
+        <version>3.5.12-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
